--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <li>
             <button><a href="#">Trace Honey</a></button>
           </li>
-          <li>
-            <button id="shop">
+          <li id="shop">
+            <button id="shop-btn">
               <img src="assets/img/logo.png" alt="logo" /><a href="#">Shop</a>
             </button>
           </li>
